welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:6: error: type mismatch;
 found   : String("R")
 required: Int
  case"R"=> droite();avance()
      ^BDR2:8: error: type mismatch;
 found   : String("L")
 required: Int
  case"L"=> gauche();avance()
      ^BDR2:10: error: type mismatch;
 found   : String("I")
 required: Int
  case"I"=> droite(); droite(); avance()
      ^BDR2:12: error: type mismatch;
 found   : String("A")
 required: Int
  case"A"=> avance()
      ^BDR2:14: error: type mismatch;
 found   : String("B")
 required: Int
  case"B"=> avance();avance()
      ^BDR2:16: error: type mismatch;
 found   : String("C")
 required: Int
  case"C"=> avance();avance();avance()
      ^BDR2:18: error: type mismatch;
 found   : String("D")
 required: Int
  case"D"=> avance(); avance(); avance(); avance()
      ^BDR2:20: error: type mismatch;
 found   : String("E")
 required: Int
  case"E"=> avance(); avance(); avance(); avance(); avance()
      ^BDR2:22: error: type mismatch;
 found   : String("F")
 required: Int
  case"F"=> avance(); avance(); avance(); avance(); avance(); avance()
      ^BDR2:24: error: type mismatch;
 found   : String("Z")
 required: Int
  case"Z"=> recule()
      ^BDR2:26: error: type mismatch;
 found   : String("Y")
 required: Int
  case"Y"=> recule(); recule();
      ^BDR2:28: error: type mismatch;
 found   : String("X")
 required: Int
  case"X"=> recule(); recule(); recule();
      ^BDR2:30: error: type mismatch;
 found   : String("W")
 required: Int
  case"W"=> recule(); recule(); recule(); recule();
      ^BDR2:32: error: type mismatch;
 found   : String("V")
 required: Int
  case"V"=> recule(); recule(); recule(); recule(); recule();
      ^BDR2:34: error: type mismatch;
 found   : String("U")
 required: Int
  case"U"=> recule(); recule(); recule(); recule(); recule(); recule(); 
      ^